# scireagent-v1

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  start-dev.bat
backend/: .env.example  CLAUDE.md  Dockerfile  genesis_crossref.py  genesis_pubmed.py  genesis_pubmed2.py  genesis_step1.py  genesis_step2.py  genesis_step456.py  manage.py  manage_safe.py  pyproject.toml  pytest.ini  requirements.txt
backend/apps/accounts/: admin.py  apps.py  models.py
backend/apps/assets/: admin.py  apps.py  models.py  services.py
backend/apps/bridges/: admin.py  apps.py  models.py
backend/apps/commerce/: admin.py  apps.py  models.py  selectors.py  services.py
backend/apps/documents/: admin.py  models.py
backend/apps/knowledge/: admin.py  admin_dashboard.py  admin_views.py  apps.py  models.py  selectors.py  services.py
backend/apps/quotes/: admin.py  apps.py  models.py
backend/apps/transactions/: admin.py  apps.py  models.py  selectors.py  services.py
backend/bioproagent/: Licenses.md  README.md  main.py  main_evaluate.py  requirements.txt
backend/bioproagent/config/: evaluation_profiles.json  settings.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/core/: agent_read.py  chain_creator.py  csv_importer.py  exceptions.py  json_importer.py  json_validator.py  jsonld.py  mixins.py  models.py  pagination.py  permissions.py  renderers.py  serializers.py  svg_sanitizer.py
backend/data/: scan_report.json
backend/scripts/: run_tests.bat  run_tests.sh  verify_urls.py
backend/tools/: check_json.py  debug_csv.py  debug_import.py
(+392 files in other folders)
